# nmea_navsat_driver

./: CMakeLists.txt  DSD_readme.md  README.rst
launch/: nmea_serial_driver_dsd.launch
src/libnmea_navsat_driver/: driver.py
